Fixed bugs: Messages are correctly displayed, site name is now visible

--- a/src/style/adminpanel/login.scss
+++ b/src/style/adminpanel/login.scss
@@ -19,6 +19,11 @@
         font-weight: bold;
         color: #333;
       }
+
+      .errorMessage {
+        font-size: small;
+        color: red;
+      }
   
       input[type="email"],
       input[type="password"] {
