--- a/src/style/messenger/login.scss
+++ b/src/style/messenger/login.scss
@@ -34,3 +34,13 @@
         background-color: #0056b3;
     }
 }
+
+.socialNetwork {
+    padding-top: 30px;
+    display: flex;
+    justify-content: center;
+
+    img {
+        width: 50px;
+    }
+}
